--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,11 +12,41 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->        
+    <![endif]-->      
+
+
+    <script src="https://code.jquery.com/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
+
+<link href="css/bootstrap.css" rel="stylesheet">
+<link href="css/bootstrap-theme.css" rel="stylesheet">
+<link href="css/hci-friends.css" rel="stylesheet">
+
 </head>
 
 <body>
+
+
+	<div class="container">
 	<h1>My HCI Friends</h1>
+
+<!--Added this one just for fun!-->
+
+	<img src="http://i61.tinypic.com/egczma.jpg" width="300" height="500" border="0" alt="Image and video hosting by TinyPic">
+
+	<h3>This is Ashley! We are besties.</h3>
+	<p> <h5>We've been friends since freshmen year and we are pretty much the same person, but in two different bodies. Except for the fact that we are totally different. :)</h5>
+	</p>
+
+
+        {{#each friends}}
+        <p>{{name}}</p>
+        <img src={{imageURL}}>
+        <p>{{description}}</p>
+        {{/each}}
+        
+
 
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
@@ -30,5 +60,8 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+	</div>
+	
 </body>
+
 </html>
